changed playlist for freshman year

--- a/pages/freshman-year.html
+++ b/pages/freshman-year.html
@@ -60,11 +60,14 @@
   </section>
   <section class="text"> -->
     <!-- Video collage -->
-    <section class="video">
+    <!-- <section class="video">
       <video controls="controls" width="800" height="600" name="Video Name">
         <source src="../content/freshman-year/video-collage.mp4">
       </video>
-    </section>
+    </section> -->
+    <section class="playlist">
+      <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/playlist/nostalgia/pl.u-06oxpz3sYddGNqP"></iframe>
+    </section><br>
     <!-- Introduction to freshman year -->
     <section>
       <h1>Welcome to my freshman year</h1><br>
