--- a/pages/sophomore-year.html
+++ b/pages/sophomore-year.html
@@ -53,7 +53,7 @@
 <!-- Professional life -->
 <section>
     <h1>Professional life</h1><br>
-    <p><strong>Black Campus Ministries Co-President</strong>
+    <!-- <p><strong>Black Campus Ministries Co-President</strong>
     </p><br>
     <p>
         After being a member my freshman year, I stepped up to the plate to run BCM my sophomore year. It was a struggle since most of our members had either graduated or stopped attending (as was a trend in most spaces during the pandemic). However, I had a great time growing closer with my advisors, Brandi and Wyietah, along with new and returning members of BCM! As president of BCM, I led weekly Bible Studies with a justice-centered approach and facilitied activities to build connection among attendees through a virtual setting.
@@ -62,7 +62,7 @@
         <video video controls autoplay>
           <source src="../content/sophomore-year/bcmvid.mp4" type="video/mp4">
         </video>
-    </section><br>
+    </section><br> -->
     <p><strong>Changemakers in Computing Mentor</strong>
     </p><br>
     <p>
