--- a/pages/junior-year.html
+++ b/pages/junior-year.html
@@ -59,7 +59,13 @@
     <p>
         Although I was selected to be a peer educator and prepared to do so last year, this was my first year actually teaching my students. During Autumn 2021 I utilized the lesson plans and activities I prepared last year to teach 12 newly admitted first year Honors students Honors requirements, how to make the most of their Husky experience, and help them build community among each other.
     </p><br>
-    <img class="honorstranscript" src="../content/junior-year/peereducators.jpg"><br>
+    <p><strong>Interdisciplinary Honors Lead Peer Educator (Experiential Learning #2)</strong>
+    </p><br>
+    <p>
+        Since I was returning as a Peer Educator, I decided to take up some more responsibilites and become a Lead Peer Educator. My second time around being a Peer Educator was so much better than the last. My confidence in the classroom with other Peer Educators increased drastically, and I found myself participating more. I also felt more comfortable in the classroom because I got to know my peers better during a retreat we took to Forks, WA at the beginning of the quarter.
+    </p><br>
+    <img class="honorstranscript" src="../content/junior-year/honorsspringretreat.jpg"><br>
+    <iframe class="honorstranscript" src="../content/junior-year/Honors 397 Spring Reflection.pdf" width="100%" height="800px"></iframe><br>
     <p><strong>Academic Success Coach</strong>
     </p><br>
     <p>
