changed size of pe photo

--- a/pages/junior-year.html
+++ b/pages/junior-year.html
@@ -59,7 +59,7 @@
     <p>
         Although I was selected to be a peer educator and prepared to do so last year, this was my first year actually teaching my students. During Autumn 2021 I utilized the lesson plans and activities I prepared last year to teach 12 newly admitted first year Honors students Honors requirements, how to make the most of their Husky experience, and help them build community among each other.
     </p><br>
-    <img class="honorstranscript" src="../content/junior-year/peereducators.jpg"><br>
+    <img class="trackstarsleaderboard" src="../content/junior-year/peereducators.jpg"><br>
     <p><strong>Academic Success Coach</strong>
     </p><br>
     <p>
