updated home page

--- a/pages/index.html
+++ b/pages/index.html
@@ -21,16 +21,15 @@
     <!-- Introduction to portfolio -->
     <main>
         <img src="../img/uw-quad.jpg" class="quad" alt="University of Washington overhead view of The Quad"><br>
-        <h1>Welcome</h1><br>
+        <h1>Welcome!</h1><br>
         <p>
-            Welcome to my Honors portfolio. My name is Wintana Eyob and I'm a third year at the UW studying Informatics with Interdisciplinary Honors. This isn't your typical portfolio with a resume and projects, although if you're interested in that, you can find my professional experiences clearly laid out in <a href="">my other portfolio</a>. My Honors portfolio is a site I created as part of my final requirements for graduating with Interdisciplinary Honors at the University of Washington (UW).
+            Hi, welcome to my Honors portfolio! My name is Wintana Eyob and I'm a senior at the University of Washington (UW) studying Informatics with Interdisciplinary Honors. This isn't your typical portfolio with a resume and projects, although if you're interested in that, you can find my professional experiences clearly laid out in <a href="">my other portfolio</a>.
         </p><br>
-        <p></p>
         <p>
-            This site is a culmination of my undergraduate experience at UW. You'll get to see how I've evolved academically, professionally, and personally in my four years here.
-        </p>
-        <p></p><br><br><br><br>
-        <img class="profile" src="../content/WintanaEyobProfile.jpg"><br><br>
+            My Honors portfolio is a site I created as part of my final requirements for graduating with Interdisciplinary Honors at the UW. This site is a culmination of my undergraduate experience at UW. You'll get to see how I've evolved academically, professionally, and personally in my four years here.
+        </p><br>
+        <!-- <p></p><br><br><br><br> -->
+        <!-- <img class="profile" src="../content/WintanaEyobProfile.jpg"><br><br> -->
     </main>
     <!-- Learning statement -->
     <section>
@@ -42,34 +41,26 @@
         <p>
             I heard it was the future of our world (whatever that meant), so I thought it would be a useful skill to pick up. But, I never made an action plan for how I'd learn how to code. In fact, I forgot about that bucket list for a few years.
         </p><br>
-        <p></p>
         <p>
             It wasn't until a few years later that I'd seriously consider learning how to code.
         </p><br>
-        <p></p>
         <p>
-            I came into UW uncertain about my career and what I wanted to study. When filling out the application, American Ethnic Studies (AES) was the only major that sounded appealing, so I applied for it (we have to apply to our majors at UW 🥲) and got accepted into UW as an AES major 🥳!
+            Like most students, I came into the UW uncertain about my career and what I wanted to study. But I knew two things: I was passionate about social justice and I wanted to make a lot of money.
         </p><br>
-        <p></p>
         <p>
-            However, during the summer before my freshman year I realized that I didn't want to pursue AES. Even though I wasn't certain about what I wanted to study, I knew two things: I was passionate about social justice and I wanted to make a lot of money. I thought the road to this might be double majoring in sociology and marketing.
+            I shared my plan with my advisor, and she introduced me to Informatics.
         </p><br>
-        <p></p>
+            She explained that in this major I could fuel my passion for justice while learning technical skills. And that's exactly what happened.
+        </p><br>
         <p>
-            I shared my plan with my advisor during Advising & Orientation. She told me I could pursue a double major in sociology and marketing if I wanted to, but I'd probably end up back in her office in a few years venting about how miserable I was. Yeah. I was surprised she said that too. After invalidating my goals, she also tried to convince me to major in dance because I told her I danced throughout high school.
+            I learned new technical skills: programming, design thinking, data analysis, and so much more, all while having a huge ethics focus, and applying these concepts in long-term group projects that focus on using technology for the betterment of society.
         </p><br>
-        <p></p>
         <p>
-            She partially redeemed herself at the end of our session by introducing me to Informatics and putting me in an introductory first-year interest group for the major. She explained that in this major I could fuel my passion for justice while learning technical skills, and registered me for Gender & Information Technology (INFO 102) and Introduction to Women's Studies (GWSS 200) along with a seminar with around 12 other freshmen registered for the same courses.
+            Using technology for social good is just one of the ways I've found a creative way to combine my passions into one. As you'll see throughout my portfolio, my interests vary a bunch, but I love finding ways to combine them into one.
         </p><br>
-        <p></p>
         <p>
-            I was just happy to be registered for classes that aligned with my interest in making money and passion for pursuing justice. And so began my journey at UW.
-        </p><br>
-        <p></p>
-        <p>
-            *PS I know how problematic my comments about major and salary may sound, but here was my reasoning: throughout high school, I had been involved in and led various activities, events and programs that pursued social justice; I knew I could make contributions toward justice with or without a degree. Therefore, I wanted to spend my time at UW learning a skill that I wouldn't invest in learning on my own time. Since coding was on my bucket list and was a guaranteed (key-word: guaranteed) money-maker, I decided on learning that new skill. I decided to pursue it through Informatics because I could have the best of both worlds in learning technical skills while applying those skills toward social justice. I understand that you can make a lot of money with social science majors, but I wanted my major to be a <em>guaranteed</em> money-maker (without needing to go to grad school). As much as I valued social justice, I also really valued financial security.
-        </p><br>
+            I hope you have fun browsing around and seeing some of my favorite moments at the UW! Enjoy :)
+        </p>
     </section>
 </body>
 <footer>
