updated sophomore year welcome, personal life, and academic

--- a/pages/freshman-year.html
+++ b/pages/freshman-year.html
@@ -127,7 +127,7 @@
         <strong>United Negro College Fund Portfolio Project</strong>
       </p><br>
       <p>
-        This was my first time mentoring. Although I accidentally applied for this position (I thought I was applying for something else LOL), I was SO grateful for the mix-up. I've benefitted tremendously from mentorship programs, and this was my opportunity to pay it forward with the knowledge I had accumilated. For 11 weeks, I mentored 3 Black high school students and supported them as they built their college portfolio. I met them every Saturday from 12pm-3pm and assisted them with their personal statements, college applications, resumes, and more.
+        This was my first time mentoring. I've benefitted tremendously from mentorship programs, and this was my opportunity to pay it forward with the knowledge I had accumilated. For 11 weeks, I mentored 3 Black high school students and supported them as they built their college portfolio. I met them every Saturday from 12pm-3pm and assisted them with their personal statements, college applications, resumes, and more.
       </p><br>
       <img class="portfolioprojectacceptance" src="../content//freshman-year/portfolioproject.jpg"><br>
       </section>
