--- a/pages/sophomore-year.html
+++ b/pages/sophomore-year.html
@@ -23,32 +23,30 @@
 <section>
     <h1>Welcome to my sophomore year</h1><br>
     <p>
-        Quarantine made it difficult to maintain my social life. As a result, my sophomore year was full of professional development. I accomplished a lot this year, and got to celebrate toward the end of Spring Quarter by traveling to multiple states (once I got my COVID-19 vaccination) and finally reconnecting with my friends and family in person after being seperated for so long (due to the pandemic). 
-        
-        Additionally, the COVID-19 vaccine got released this year, and hope was starting to spread that life would start returning back to normal.
-    </p>
+        Quarantine made it difficult to maintain my social life. As a result, my sophomore year was full of professional development. I accomplished a lot this year and got to celebrate my wins toward the end of Spring Quarter. Once I got my COVID-19 vaccine, I traveled to multiple states and finally reconnected with my friends and family in person after being seperated for so long due to the pandemic. Since the COVID-19 vaccine got released this year, hope was starting to spread that life would start returning back to normal.
+    </p><br>
 </section>
 <!-- Personal life -->
 <section>
     <h1>Personal life</h1><br>
-    <p>
-        Once I got my COVID-19 vaccine, things were starting to look up for the world, and I began travelling. In May 2021, I took a trip to Denver, CO with my dad for my cousin's high school graduation. It was a great escape from Seattle, and helped me reconnect with my family in Colorado.
-        
-        When school ended, I took a trip to Los Angeles, CA with a few friends in June 2021. This was the most fun I had in such a long time. It felt like my first taste of freedom since the pandemic began. I got to reconnect with friends I hadn't seen in months, and got to finally see friends in person that I had only seen virtually for the last year and a half. My friends and I experienced a positive culture shock with the sunny weather and friendly people in California, and came back to Seattle refreshed and ready to keep travelling.
-    </p><br>
     <img class="trackstarsleaderboard" src="../content//sophomore-year/denver.jpg"><br>
+    <p>
+        In May 2021, I took a trip to Denver, CO with my dad for my cousin's high school graduation. It was a great escape from Seattle, and helped me reconnect with my family in Colorado. I also got to see what my life could have turned out to be - I was born in Colorado, so visiting places like the hospital I was born in and the apartments I used to live in was an interesting experience of envisioning "what could have been" if I had continued to grow up there.
+    </p><br>
     <img class="honorstranscript" src="../content//sophomore-year/cali.jpg"><br>
+    <p>
+        When school ended, I took a trip to Los Angeles, CA with a few friends. This was the most fun I had in such a long time. It felt like my first taste of freedom since the pandemic began. I got to reconnect with friends I hadn't seen in months, and got to finally see friends in person that I had only seen virtually for the last year and a half. My friends and I also experienced a positive culture shock with the sunny weather and friendly people in California, and came back to Seattle refreshed and ready to keep travelling.
+    </p><br>
 </section>
 <!-- Academic life -->
 <section>
     <h1>Academic life</h1><br>
-    <p><strong>Calderwood Seminar for Public Writing: Math That Lies: Communicating Why Some Quantitative Arguments are Misleading or Bogus (Honors 221)</strong>
+    <p><strong>Calderwood Seminar for Public Writing: Math That Lies: Communicating Why Some Quantitative Arguments are Misleading or Bogus (H 221)</strong>
     </p><br>
     <p>
-        This was my first writing class at UW and it was incredible! I love writing, and usually coast through writing courses with minimal effort and stellar grades, but this class was super challenging. It intimidated me at first because each week we have to do extensive reading and writing, and alternate between being the writer and editor. I was also scared because each week we have an in-depth critique of everyone's writing in front of the entire class. I was worried my writing wouldn't be good enough, but through the extensive critiques I was able to sharpen my writing to be the best it had ever been in my life, and all in just 10 weeks! In a single quarter, I learned the importance of and the skills to simplify complicated quantitative topics to be easily understood through writing. This was definitely one of my favorite classes I've ever taken! I also ended with a pretty good grade ;)
+        This was my first writing class at UW and it was incredible! I was super intimidated by this class because each week we had an in-depth critique of everyone's writing in front of the entire class. I was worried my writing wouldn't be good enough, but in just 10 weeks I learned the importance of and the skills to simplify complicated quantitative topics to be easily understood through writing. This was definitely one of my favorite classes I've ever taken! I also ended with a pretty good grade ;)
     </p><br>
     <iframe class="trackstarsleaderboard" src="../content/sophomore-year/BookReviewWMD.pdf" width="50%" height="700px"></iframe><br><br>
-    <img class="honorstranscript" src="../content//sophomore-year/honorstranscript.jpg"><br>
 </section>
 <!-- Professional life -->
 <section>
