updated senior year

--- a/pages/senior-year.html
+++ b/pages/senior-year.html
@@ -23,12 +23,15 @@
     </p><br>
 </section>
 <!-- Academic life -->
-<!-- <section>
-    <h1>Academic life</h1>
+<section>
+    <h1>Academic life</h1><br>
+    <p><strong>Peer Educator Seminar (Honors 397)</strong>
+    </p><br>
     <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem voluptatum unde asperiores, dicta est quaerat, molestiae provident soluta optio voluptate quos iure illo totam debitis ipsam vero magni temporibus architecto.
-    </p>
-</section> -->
+        This is my final reflection for my second year being a Peer Educator, and my first year being a Lead Peer Educator.
+    </p><br>
+    <iframe class="trackstarsleaderboard" src="../content/senior-year/Final Reflection.pdf" width="50%" height="700px"></iframe><br><br>
+</section>
 <!-- Professional life -->
 <!-- <section>
     <h1>Professional life</h1>
