--- a/pages/sophomore-year.html
+++ b/pages/sophomore-year.html
@@ -23,20 +23,20 @@
 <section>
     <h1>Welcome to my sophomore year</h1><br>
     <p>
-        Quarantine made it difficult to maintain my social life. As a result, my sophomore year was full of professional development. I accomplished a lot this year and got to celebrate my wins toward the end of Spring Quarter. Once I got my COVID-19 vaccine, I traveled to multiple states and finally reconnected with my friends and family in person after being seperated for so long due to the pandemic. Since the COVID-19 vaccine got released this year, hope was starting to spread that life would start returning back to normal.
+        Quarantine made it difficult to maintain my social life. As a result, my sophomore year was full of professional development. I accomplished a lot this year and got to celebrate my wins toward the end of Spring Quarter. Since the COVID-19 vaccine got released this year, hope was starting to spread that life would start returning back to normal. Once I got my COVID-19 vaccine, I traveled to multiple states and finally reconnected with my friends and family in person after being seperated for so long due to the pandemic. 
     </p><br>
 </section>
 <!-- Personal life -->
 <section>
     <h1>Personal life</h1><br>
-    <img class="trackstarsleaderboard" src="../content//sophomore-year/denver.jpg"><br>
     <p>
         In May 2021, I took a trip to Denver, CO with my dad for my cousin's high school graduation. It was a great escape from Seattle, and helped me reconnect with my family in Colorado. I also got to see what my life could have turned out to be - I was born in Colorado, so visiting places like the hospital I was born in and the apartments I used to live in was an interesting experience of envisioning "what could have been" if I had continued to grow up there.
     </p><br>
-    <img class="honorstranscript" src="../content//sophomore-year/cali.jpg"><br>
+    <img class="trackstarsleaderboard" src="../content//sophomore-year/denver.jpg"><br>
     <p>
-        When school ended, I took a trip to Los Angeles, CA with a few friends. This was the most fun I had in such a long time. It felt like my first taste of freedom since the pandemic began. I got to reconnect with friends I hadn't seen in months, and got to finally see friends in person that I had only seen virtually for the last year and a half. My friends and I also experienced a positive culture shock with the sunny weather and friendly people in California, and came back to Seattle refreshed and ready to keep travelling.
+        When school ended, I took a trip to Los Angeles, CA with a few friends. It felt like my first taste of freedom since the pandemic began because I got to connect with a big group of friends in person for the first time in a year and a half. My friends and I also experienced a positive culture shock with the sunny weather and friendly people in California, and came back to Seattle refreshed and ready to keep travelling.
     </p><br>
+    <img class="honorstranscript" src="../content//sophomore-year/cali.jpg"><br>
 </section>
 <!-- Academic life -->
 <section>
@@ -44,7 +44,7 @@
     <p><strong>Calderwood Seminar for Public Writing: Math That Lies: Communicating Why Some Quantitative Arguments are Misleading or Bogus (H 221)</strong>
     </p><br>
     <p>
-        This was my first writing class at UW and it was incredible! I was super intimidated by this class because each week we had an in-depth critique of everyone's writing in front of the entire class. I was worried my writing wouldn't be good enough, but in just 10 weeks I learned the importance of and the skills to simplify complicated quantitative topics to be easily understood through writing. This was definitely one of my favorite classes I've ever taken! I also ended with a pretty good grade ;)
+        This was my first writing class at UW and one of my favorite classes I've ever taken :) We critiqued everyone's work in front of the class, so came in super intimidated and worried my writing was inadequate. But in just 10 weeks I learned the importance of and the skills to simplify complicated quantitative topics to be easily understood through writing.
     </p><br>
     <iframe class="trackstarsleaderboard" src="../content/sophomore-year/BookReviewWMD.pdf" width="50%" height="700px"></iframe><br><br>
 </section>
@@ -54,7 +54,7 @@
     <p><strong>Black Campus Ministries Co-President</strong>
     </p><br>
     <p>
-        After being a member my freshman year, I stepped up to the plate to run BCM my sophomore year. It was a struggle since most of our members had either graduated or stopped attending (as was a trend in most spaces during the pandemic). However, I had a great time growing closer with my advisors, Brandi and Wyietah, along with new and returning members of BCM! As president of BCM, I led weekly Bible Studies with a justice-centered approach and facilitied activities to build connection among attendees through a virtual setting.
+        After being a member my freshman year, I stepped up to the plate to run BCM my sophomore year and had a blast getting closer with the members and club advisors. It was a struggle since most of our members had either graduated or stopped attending (as was a trend in most spaces during the pandemic), but we made it work ;) As president of BCM, I led weekly Bible Studies with a justice-centered approach and facilitied activities to build connection among attendees through a virtual setting.
     </p><br>
     <section class="video">
         <video video controls autoplay>
@@ -64,13 +64,13 @@
     <p><strong>Changemakers in Computing Mentor</strong>
     </p><br>
     <p>
-        During Winter Break 2020, I got hired as a mentor for the UW Allen School of Computer Science's Changemakers in Computing program. As a mentor, I created an outreach strategy calender to reach 9 youth development programs and recruit 25 mentees for our pilot year. Once the program began, I helped historically marginalized students code for social good during the 4-week summer program. I helped students debug their code during office hours and created virtual presentations and lesson plans to direct them in a week-long hackathon where they combined their technical skills with justice frameworks to use technology to positively impact an existing social issue.
+        During Winter Break 2020, I got hired as a mentor for the UW Changemakers in Computing 4-week summer program. As a CIC mentor, I created an outreach calender to recruit 25 mentees for our pilot year. Once the program began, I helped historically marginalized students code for social good in office hours and by planning a week-long hackathon for them to apply what they've learned.
     </p><br>
     <iframe class="honorstranscript" src="../content/sophomore-year/Workshop_ How to Pitch Your Project.pdf" width="100%" height="500px"></iframe><br>
     <p><strong>CodePath.org Mobile Development Student</strong>
     </p><br>
     <p>
-        During Winter 2021, I enrolled in this 8-week course and learned how to code for iOS. I met for a couple hours each Saturday for coding lessons and Q&A sessions with industry leaders like Pinterest and SpaceX. Throughout the week I worked on my own time to complete each deliverable. By the end of the program, I had created an iOS app where users could upload and save flashcards to their device. With a simple tap, users can alternate between their inputted questions and answers. 
+        During Winter 2021, I enrolled in this 8-week course and learned how to code for iOS. I met for a couple hours each Saturday for coding lessons and fireside chats with professionals in the industry, and worked on the weekly deliverables on my own time. By the end of the program, I had created an iOS app where users could upload and save flashcards to their device. With a simple tap, users can alternate between their inputted questions and answers. 
     </p><br>
     <img class="trackstarsleaderboard" src="../content//sophomore-year/appwalkthrough.gif"><br>
 </section>
